# guidescanpy

./: .flake8  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml  snakemake.yml  snakemake_linux.yml  snakemake_macos.yml
docker/: .env  Dockerfile  README.md  docker-compose.yml
docker/snakemake/: Snakefile  config.json  env.yaml
docker/snakemake/rs2/: ._analysis  env.yaml  main.py
docker/snakemake/rs2/analysis/: load_data.py  model_comparison.py  predict.py  rs2_score_calculator.py  util.py
scripts/: add_organism.py  init_db.sql  monitor  start  start-guidescan  stop  worker
snakemake/: Snakefile  config.json
snakemake/rs2/: main.py
snakemake/rs2/analysis/: local_multiprocessing.py  util.py
snakemake/rs2/analysis/features/: microhomology.py
snakemake/rs2/analysis/models/: baselines.py
src/guidescan/: __init__.py  __main__.py  config.json
src/guidescan/flask/: __init__.py  db.py
src/guidescan/flask/blueprints/: info.py  query.py  web.py
src/guidescan/flask/core/: genome.py  utils.py
src/guidescan/flask/templates/: about.html  base.html  contact.html  downloads.html  gene_targeting_library.html  genome.html  grna_design.html  grna_sequence_search.html
src/guidescan/tasks/: __init__.py
src/guidescanpy/: __init__.py  __main__.py  config.json  config.json.orig  config.py  config.yaml  configuration.py  exceptions.py
src/guidescanpy/commands/: add_organism.py  add_sam_tag.py  add_tag.py  decode.py  filter_tag.py  generate_kmers.py  init_db.py  init_db.sql
src/guidescanpy/core/: guidescan.py
src/guidescanpy/flask/: __init__.py  db.py  tables.py
src/guidescanpy/flask/blueprints/: info.py  job.py  job_library.py  job_query.py  job_sequence.py  library.py  query.py  sequence.py  web.py
src/guidescanpy/flask/core/: decode_database.py  generate_kmers.py  genome.py  parser.py  utils.py
src/guidescanpy/flask/static/: custom.css
src/guidescanpy/flask/templates/: about.html  base.html  contact.html  downloads.html  feedback.html  gene_targeting_library.html  grna_design.html  grna_sequence_search.html  job.html  job_library.html  job_query.html  job_sequence.html
src/guidescanpy/tasks/: __init__.py
tests/: conftest.py  test_add_organism.py  test_bam.py  test_config.py  test_db.py  test_genome.py  test_guidescan.py  test_interval.py  test_library.py  test_parsing.py  test_query.py  test_sequence.py
tests/data/: hs1.chromAlias.txt  query_CNE1.json  query_CNE1_filter_pattern.json  query_CNE1_min_cutting_efficiency.json  query_CNE1_min_gc_content.json  query_CNE1_min_specificity.json  query_manual_filter_annotated.json  query_offtarget_on_scaffold.json  sacCer3.bam.sorted.bai  sacCer3_chr2acc.txt  sacCer3_chrI_II_IX_itrees.pkl  sacCer3_regions.bed  sacCer3_regions.gtf  sacCer3_regions.txt
(+5 files in other folders)
